--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@
      margin: 0;
      padding: 0;
 }
- h1,h2,h3,h4,h5,h6,ul,a{
+ h1,h2,h3,h4,h5,h6,a{
      font-family: 'Abel', sans-serif;
      font-weight: 300;
      color: #fff;
@@ -84,12 +84,16 @@
  li{
      list-style: none;
 }
+ul.icons{
+    color: white !important;
+}
  select,input,textarea {
      -webkit-box-sizing: border-box;
      -moz-box-sizing: border-box;
      box-sizing: border-box;
      font-family: 'Abel', sans-serif;
 }
+
 #header{
         position: fixed;
     
@@ -714,6 +718,7 @@
  #section-photo .page-content {
     padding: 0 10%;
     margin-top: 70px;
+    margin-bottom: 70px;
 }
  #section-videos .page-content {
      width: 60%;
@@ -1029,8 +1034,8 @@
      color: #fff;
      font-size: 1.2em 
 }
- .photo-page-bg .desc{
-     color: #fff;
+  .photo-page-bg .desc{
+   /*  color: #fff; */
      font-size: 1.0em 
 }
  .single-page .desc{
@@ -1494,6 +1499,13 @@
  .contact-area .heading {
      color: #fff;
 }
+.reservHeading{
+    font-size: 4.8em;     
+    margin-left: 0px ! important;   
+}
+.contact-heading{
+    font-size: 4em;    
+}
  .team-container .heading{
      color: #fff;
      margin: 10px 0;
@@ -1556,6 +1568,7 @@
  .contact-area .address{
      margin: 20px 0;
      margin-right: 20px;
+     margin-left: 10px;
 }
  .contact-area .address .title{
      margin-bottom: 5px;
@@ -1755,12 +1768,12 @@
 }
 
 #member_box{
-    opacity: 0.8;
+ /*   opacity: 0.8;*/
     background: white;
 }
 
 #contact_box{
-    padding: 0 10% 0 10% ;
+    padding: 0 10% 0 0% ;
 }
 #people_num{
     border-bottom: 2px solid !important;
@@ -2079,7 +2092,7 @@
      
 }
 .introphotos #faba{
-    height: 400px;
+    height: 27vw;
 }
  #faba * {
      -webkit-box-sizing: border-box;
@@ -2127,14 +2140,19 @@
      position: relative;
      box-shadow: inset 0 0 1px #e7e7e7;
      overflow: hidden;
-     height: 170px;
+     /* height: 170px;*/
+     height: 75% !important;
 }
+ .faba-intro .fb-album .fb-wrap{
+        height: auto !important;
+    }
  .fb-album .badge{
      position: absolute;
      font-size: 0.8em;
      left: 8px;
      bottom: 6px;
      opacity: 0 
+
 }
  .fb-album .ovlpic.active{
      opacity: 1 
@@ -3092,9 +3110,9 @@
 /* Screens Resolution : max-width: 1180px) -------------------------------------------------------------------------- */
 /* Media Queries */
  @media only screen and (max-width: 1180px){
-     .fb-album .fb-wrap {
+    /* .fb-album .fb-wrap {
          height: 88%!important;
-    }
+    }*/
      .team-area .swiper-container{
          overflow: hidden;
     }
@@ -3282,8 +3300,8 @@
          height: 0;
     }
      .contact-area .address {
-         margin: 10px 0;
-         margin-right: 5px;
+         margin: 10px 5px;
+     /*    margin-right: 5px;*/
     }
      .contact-area .contact-form .form-control {
          height: 40px;
@@ -3334,6 +3352,11 @@
     .memberBox{
         height: 85% !important;
         overflow: scroll;
+        
+    }
+    .yottie-popup .yottie-popup-wrapper {
+        
+        top: 60px ! important;
         
     }
     form#contactable-contactForm input, form#contactable-contactForm textarea, form#contactable-contactForm select {
@@ -3435,10 +3458,16 @@
     }
     .contact-heading{
         margin-left: 0px ! important;
-        margin-top: 40px ! important;
+        /*margin-top: 40px ! important;*/
+        font-size: 36px;
     }
     #contact_box{
         padding: 0 10% 0 12%;
+    }
+
+    .faba-intro .fb-album .fb-wrap {
+    
+        height: calc(100% - 25px) !important;
     }
 }
 /* Screens Resolution : 359px -------------------------------------------------------------------------- */
@@ -3845,9 +3874,10 @@
     opacity: 0.8;
     background: white;
 }
+/*
 #members_half h6, ul {
     color: black !important;
-}
+}*/
 
 
 .temp-team{
@@ -3963,11 +3993,4 @@
         .mobile-row {
             display: block;
         }
-    }
-    .reservHeading{
-        font-size: 4.8em;     
-        margin-left: 0px ! important;   
-    }
-    .contact-heading{
-        font-size: 4.8em;    
     }
