--- a/css/styles.css
+++ b/css/styles.css
@@ -10,8 +10,7 @@
      overflow-x: hidden;
      color: #000;
      font-size: 15px;
-    /* font-family: 'Abel', sans-serif;*/
-     font-family: sans-serif;
+	 font-family: 'Abel', sans-serif;
     /* word-wrap: break-word;*/
      -webkit-font-smoothing: antialiased;
      -moz-osx-font-smoothing: grayscale;
@@ -21,8 +20,7 @@
      padding: 0;
 }
  h1,h2,h3,h4,h5,h6,a{
-    /* font-family: 'Abel', sans-serif;*/
-     font-family: sans-serif;
+     font-family: 'Abel', sans-serif;
      font-weight: 300;
      color: #fff;
 }
@@ -371,10 +369,10 @@ ul.icons{
  .nav-icon:after{
      content:'';
      position: absolute;
-     top: -16px;
+     top: -15px;
      border-color: #d6b161;
      background-color: #000;
-     bottom: -18px;
+     bottom: -19px;
      right: -12px;
      left: -12px;
      z-index: -1;
@@ -393,7 +391,7 @@ ul.icons{
      position: absolute;
      height: 1px;
      width: 100%;
-     left: -2px;
+     left: 0;
      transition: all .4s ease-in-out;
 }
  .nav-icon span:nth-child(1){
@@ -785,13 +783,12 @@ ul.icons{
     -webkit-filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg); 
 }
 .videos-filter{
-    background-image: url(../images/bg/club-pro7.jpg);
+    background-image: url('../images/bg/club-pro7.jpg');
     filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg);
     -webkit-filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg); 
 }
  #section-photo h2.heading b {
      font-size: 38px;
-}
 }
  #section-photo h5.desc {
      font-size: 16px;
