changed by daniel 3-21

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,6 @@
 /* Stylesheet for ivyclub.ch Webpage */
 /* --------------------------------- 1. PRIMARY STYLES --------------------------------- */
+
  html {
      font-size: 100%;
      height: 100%;
@@ -780,6 +781,12 @@ ul.icons{
 
 .photos-filter{
     background-image: url('../images/bg/187-strassenband-showcase.jpg');
+    filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg);
+    -webkit-filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg); 
+    height: auto ! important;
+}
+.ticket-filter{
+    background-image: url('../images/bg/club-party.jpg');
     filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg);
     -webkit-filter: grayscale(29%) sepia(0.69) saturate(0.63) brightness(66%) hue-rotate(358deg); 
     height: auto ! important;
