final version at 2018-3-27

--- a/css/styles.css
+++ b/css/styles.css
@@ -3240,7 +3240,7 @@ ul.icons{
          padding: 0 15px;
           
     }
-    .aboutPage, .clubPage{
+    .aboutPagedouble, .clubPage{
         padding: 0 30px;
     }
     
